// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`from > from(-1) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-1
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
-1
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(-2) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-2
╠══════════════════════════════════════════════════╣ THEN THROWS ERROR
Error: Value must be odd, got: -2
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(-3) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-3
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
-3
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(-4) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-4
╠══════════════════════════════════════════════════╣ THEN THROWS ERROR
Error: Value must be odd, got: -4
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(0) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
0
╠══════════════════════════════════════════════════╣ THEN THROWS ERROR
Error: Value must be odd, got: 0
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(1) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
1
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
1
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(1.5) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
1.5
╠══════════════════════════════════════════════════╣ THEN THROWS ERROR
Error: Value must be an integer, got: 1.5
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(2) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
2
╠══════════════════════════════════════════════════╣ THEN THROWS ERROR
Error: Value must be odd, got: 2
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(3) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
3
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
3
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(3.1) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
3.1
╠══════════════════════════════════════════════════╣ THEN THROWS ERROR
Error: Value must be an integer, got: 3.1
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(4) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
4
╠══════════════════════════════════════════════════╣ THEN THROWS ERROR
Error: Value must be odd, got: 4
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(5) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
5
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
5
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(99) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
99
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
99
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(null) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
null
╠══════════════════════════════════════════════════╣ THEN THROWS ERROR
Error: Value must be an integer, got: Infinity
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(null) 2`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
null
╠══════════════════════════════════════════════════╣ THEN THROWS ERROR
Error: Value must be an integer, got: NaN
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is("3") 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
3
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
false
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(-1) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-1
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
true
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(-2) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-2
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
false
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(-3) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-3
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
true
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(-4) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-4
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
false
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(0) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
0
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
false
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(1) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
1
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
true
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(1.5) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
1.5
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
false
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(2) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
2
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
false
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(3) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
3
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
true
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(3.1) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
3.1
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
false
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(4) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
4
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
false
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(5) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
5
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
true
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(99) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
99
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
true
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(100) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
100
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
false
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(null) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
null
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
false
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(null) 2`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
null
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
false
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(null) 3`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
null
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
false
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(-1) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-1
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
-1
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(-2) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-2
╠══════════════════════════════════════════════════╣ THEN RETURNS NULL
null
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(-3) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-3
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
-3
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(-4) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-4
╠══════════════════════════════════════════════════╣ THEN RETURNS NULL
null
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(0) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
0
╠══════════════════════════════════════════════════╣ THEN RETURNS NULL
null
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(1) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
1
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
1
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(1.5) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
1.5
╠══════════════════════════════════════════════════╣ THEN RETURNS NULL
null
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(2) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
2
╠══════════════════════════════════════════════════╣ THEN RETURNS NULL
null
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(3) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
3
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
3
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(3.1) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
3.1
╠══════════════════════════════════════════════════╣ THEN RETURNS NULL
null
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(4) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
4
╠══════════════════════════════════════════════════╣ THEN RETURNS NULL
null
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(5) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
5
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
5
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(99) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
99
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
99
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(null) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
null
╠══════════════════════════════════════════════════╣ THEN RETURNS NULL
null
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(null) 2`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
null
╠══════════════════════════════════════════════════╣ THEN RETURNS NULL
null
╚══════════════════════════════════════════════════╝"
`;
